Rewrite flink task to airflow DAG; Fix bug with airflow; Add test csv file