@@ -19,7 +19,6 @@
         <flink-core.version>1.19.0</flink-core.version>
         <flink-shaded-jackson.version>2.14.2-17.0</flink-shaded-jackson.version>
         <s3.version>2.40.16</s3.version>
-        <common-dto.version>0.0.1</common-dto.version>
         <kotlin.version>2.2.21</kotlin.version>
         <java-driver-core.version>4.19.2</java-driver-core.version>
         <flink-connector-cassandra_2.12.version>3.2.0-1.19</flink-connector-cassandra_2.12.version>
@@ -50,7 +49,6 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-core</artifactId>
             <version>${flink-core.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -61,7 +59,16 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java</artifactId>
             <version>${flink-core.version}</version>
-            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-java_2.12</artifactId>
+            <version>1.14.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-scala_2.12</artifactId>
+            <version>${flink-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -82,12 +89,16 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-files</artifactId>
             <version>${flink-core.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-cassandra_2.12</artifactId>
             <version>${flink-connector-cassandra_2.12.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-s3-fs-hadoop</artifactId>
+            <version>${flink-core.version}</version>
         </dependency>
 
         <dependency>
@@ -95,11 +106,6 @@
             <artifactId>s3</artifactId>
             <version>${s3.version}</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>ru.spb.itmo.pirsbd.asashina</groupId>
-            <artifactId>common-dto</artifactId>
-            <version>${common-dto.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cassandra</groupId>
@@ -200,6 +206,7 @@
                         --add-opens=java.base/sun.security.action=ALL-UNNAMED
                         --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
                         --add-opens=java.base/java.time=ALL-UNNAMED
+                        -Djava.security.manager=allow
                     </argLine>
                 </configuration>
             </plugin>
